--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="hero">
         <div class="hero-content">
             <div class="hero-image">
-                <img src="images/preview.png" alt="Hero Image">
+                <img src="preview.png" alt="Hero Image">
             </div>
             <div class="hero-text">
                 <h2>Experience the Power of ForceConnect DNS Changer for Windows</h2>
@@ -95,7 +95,7 @@
             <div class="team-cards">
 
                 <div class="team-card">
-                    <img src="images/team-member1.jpg" alt="Team Member 1">
+                    <img src="team-member1.jpg" alt="Team Member 1">
                     <h3>Mxqius</h3>
                     <p>Founder & Lead Developer</p>
                 </div>
